# ML-DataScience-MasterClass

./: .python-version  README.md  pip_list.txt  requirements-lock.txt
04-Matplotlib/: 05-Matplotlib Exercises - Solutions.ipynb  06-Additional-Matplotlib-Commands-NO_VIDEO.ipynb
05-Seaborn/: 08-Seaborn-Exercise-Solutions.ipynb
COURSE/: Untitled.ipynb
COURSE/02-PYTHON-CRASH-COURSE/: Python_Crash-Course.ipynb
COURSE/04-NumPy/: Exercises.html  Exercises.ipynb  NumPy_Arrays.ipynb  NumPy_Indexing_and_Selection.ipynb
COURSE/05-Pandas/: Codeium.ipynb  Combining_DF_Concatenation.ipynb  Combining_DF_Concatenation_Merge.ipynb  DataFrame_Part_1_2_3_4.ipynb  Exercise.ipynb  Pandas_Conditional_Filtering.ipynb  Pandas_GroupBy_Operations.html  Pandas_GroupBy_Operations.ipynb  Pandas_I_O_HTML_Tables.ipynb  Pandas_Input_Ouput_CSV_Files.ipynb  Pandas_Pivot_Tables.ipynb  Pandas_Time_Date_Methods.ipynb  Series_Part_1_2.ipynb  Series_Part_1_2.md  test.html  test.qmd
COURSE/06-Matplotlib/: Exercise.ipynb  Matplotlib_Figures_Axes.ipynb  Matplotlib_Subplots.ipynb  Matplotlib_Understand_Figure_Object.py  rust.ipynb
COURSE/07-Seaborn-Data-Visualizations/: Categorical_Plots_Distribution.ipynb  Comparison_Plots.ipynb  Distribution_Plots.ipynb  Scatterplots.ipynb  Seaborm_Exercises.ipynb
COURSE/08-CAPSTONE_PROJECT/: Capstone_Project.ipynb
COURSE/10-LINEAR-REGRESSION/: Linear_Regression.html  Linear_Regression.ipynb  (+3 more)
MARIMO/: Linear_Regression_Project.py  pyproject.toml
MARIMO/13-LOGISTIC-REGRESSION/13-logistic-regression/: Logistic_Regression.py  main.py  pyproject.toml
(+40 files in other folders)
